Fri Feb 20 16:14:01 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Removed a .in().  In this case we need the _var, not the _ptr.
          This resolves a compiler error on SunCC.

Fri Feb 20 15:08:32 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * java/jms/README:

          Reworded some of the Windows build info.

Thu Feb 19 15:45:47 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/ReceivedDataElementList.h:

          Fixed silly double-delete condition in ReceivedDataElementList.
          NOTE: This container should be re-thought out!

Wed Feb 18 23:43:20 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/example/jbossesb

          Updated jbossesb tests for consistency.

Wed Feb 18 23:24:36 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/native/org_opendds_jms_DCPSInfoRepo.cpp:

          Minor formatting changes.

Wed Feb 18 20:50:14 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/example/jbossesb/router:

          Added first pass at ESB JMS message router.

Wed Feb 18 15:28:52 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/INSTALL:
        * java/jms/README:

        Minor documentation edits.

Wed Feb 18 14:51:43 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/example/jbossesb/helloworld/src/META-INF/jboss-esb.xml:

          Changed endpoint mapping to OneWay (resolves no ReplyTo errors).

Wed Feb 18 13:51:45 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/example/jbossesb:

          Renamed from jboss-esb.

Mon Feb 16 22:16:27 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Started annotating some routines to help understand what the
          desired behavior is.  Increased the debug level at which some