@@ -12,7 +12,7 @@ class ProgressIndicator
 public:
   ProgressIndicator(const char* format,
                     const std::size_t max,
-                    unsigned grad = 10);
+                    const std::size_t grad = 10);
 
   ~ProgressIndicator();
 
@@ -21,10 +21,10 @@ public:
 private:
   const char* format_;
   const std::size_t max_;
-  unsigned grad_;
+  const std::size_t grad_;
   
   std::size_t curr_;
-  unsigned last_; 
+  std::size_t last_; 
 };
 
 #endif /* DCPS_THRASHER_PROGRESSINDICATOR_H */
