@@ -1,3 +1,10 @@
+Fri Feb 20 20:34:32 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * tests/DCPS/Thrasher/ProgressIndicator.h:
+        * tests/DCPS/Thrasher/ProgressIndicator.cpp:
+
+          Fixed remainder of warnings on SunCC.
+
 Fri Feb 20 16:14:01 UTC 2009  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/Service_Participant.cpp:
